Organized the code a little by making the 'RemRep' class.

--- a/src/crep/Makefile
+++ b/src/crep/Makefile
@@ -1,14 +1,17 @@
+PROJ := crep
+
 CC := gcc
 CXX := g++
+
 3RDPDIR := ../../3rdp
 LDFLAGS := -pthread -ldl -lm
-CXXFLAGS := -I$(3RDPDIR)
+CXXFLAGS := -std=c++0x -I$(3RDPDIR)
 OBJS := $(3RDPDIR)/mongoose/mongoose.o \
 $(3RDPDIR)/cJSON/cjson.o
 BINDIR := ../../bin
 
 all:$(CREPO)
-	$(CXX) $(CXXFLAGS) $(OBJS) main.cpp -o $(BINDIR)/crep $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) $(OBJS) main.cpp -o $(BINDIR)/$(PROJ) $(LDFLAGS)
 
 clean:
-	rm -f $(OBJS)
+	rm -f $(BINDIR)/$(PROJ)
