Split 'main.cpp' into individual class files and created a 'RequestInfo' to wrap the mongoose request info structures.

--- a/src/crep/Makefile
+++ b/src/crep/Makefile
@@ -4,14 +4,21 @@ CC := gcc
 CXX := g++
 
 3RDPDIR := ../../3rdp
+BINDIR := ../../bin
 LDFLAGS := -pthread -ldl -lm
 CXXFLAGS := -std=c++0x -I$(3RDPDIR)
-OBJS := $(3RDPDIR)/mongoose/mongoose.o \
+3RDPOBJS := $(3RDPDIR)/mongoose/mongoose.o \
 $(3RDPDIR)/cJSON/cjson.o
-BINDIR := ../../bin
+OBJS := requestinfo.o \
+replyer.o \
+remoteobjectserver.o \
+remrep.o
 
-all:$(CREPO)
-	$(CXX) $(CXXFLAGS) $(OBJS) main.cpp -o $(BINDIR)/$(PROJ) $(LDFLAGS)
+%.o : %.cpp
+	$(CC) -c $(CXXFLAGS) -o $@ $< 
+
+all: $(OBJS)
+	$(CXX) $(CXXFLAGS) $(3RDPOBJS) $(OBJS) main.cpp -o $(BINDIR)/$(PROJ) $(LDFLAGS)
 
 clean:
-	rm -f $(BINDIR)/$(PROJ)
+	rm -f $(BINDIR)/$(PROJ) $(OBJS)
