Inserted basic CURL code to post some valid JSON formatted data to 'crep'. All seems to be fine for now.

--- a/src/rcc/Makefile
+++ b/src/rcc/Makefile
@@ -1,11 +1,11 @@
-PROJ := crep
+PROJ := rcc
 
 CC := gcc
 CXX := g++
 
 3RDPDIR := ../../3rdp
 BINDIR := ../../bin
-LDFLAGS := -g -pthread -ldl -lm
+LDFLAGS := -g -pthread -ldl -lm -lcurl
 CXXFLAGS := -std=c++0x -I$(3RDPDIR)
 3RDPOBJS := $(3RDPDIR)/mongoose/mongoose.o \
 $(3RDPDIR)/cJSON/cjson.o
