Started to implement the template for the header parsing in RCC.

--- a/src/rcc/Makefile
+++ b/src/rcc/Makefile
@@ -5,7 +5,7 @@ CXX := g++
 
 3RDPDIR := ../../3rdp
 BINDIR := ../../bin
-LDFLAGS := -g -pthread -ldl -lm -lcurl
+LDFLAGS := -g -pthread -ldl -lm -lcurl -lboost_regex
 CXXFLAGS := -std=c++0x -I$(3RDPDIR)
 3RDPOBJS := $(3RDPDIR)/mongoose/mongoose.o \
 $(3RDPDIR)/cJSON/cjson.o
