--- a/src/rcc/Makefile
+++ b/src/rcc/Makefile
@@ -9,7 +9,8 @@ LDFLAGS := -g -pthread -ldl -lm -lcurl -lboost_regex
 CXXFLAGS := -std=c++0x -I$(3RDPDIR)
 3RDPOBJS := $(3RDPDIR)/mongoose/mongoose.o \
 $(3RDPDIR)/cJSON/cjson.o
-OBJS := 
+OBJS := rcosmethod.o \
+rcoscreator.o
 
 %.o : %.cpp
 	$(CC) -c $(CXXFLAGS) -o $@ $< 
