Started adding code to 'refurbish' the client side code into working with the RCOServer object. A factory method is used and the command line dictates what tipe of operation is rcc destined for : creation or refurbishing of server objects.

--- a/src/rcc/Makefile
+++ b/src/rcc/Makefile
@@ -10,7 +10,9 @@ CXXFLAGS := -std=c++0x -I$(3RDPDIR)
 3RDPOBJS := $(3RDPDIR)/mongoose/mongoose.o \
 $(3RDPDIR)/cJSON/cjson.o
 OBJS := rcosmethod.o \
-rcoscreator.o
+rcosinterface.o \
+rcoscreator.o \
+rcosrefurbisher.o
 
 %.o : %.cpp
 	$(CC) -c $(CXXFLAGS) -o $@ $< 
