Added code to detect, connect and aquier the interface content from the naming service. The interface posted by a RCOServer object has also been simplified to facilitate client code reconstruction.

--- a/tests/InfoServer/Makefile
+++ b/tests/InfoServer/Makefile
@@ -9,7 +9,7 @@ LDFLAGS := -g -pthread -ldl -lm -lcurl -lboost_regex
 CXXFLAGS := -std=c++0x -I$(3RDPDIR)
 3RDPOBJS := $(3RDPDIR)/mongoose/mongoose.o \
 $(3RDPDIR)/cJSON/cjson.o
-OBJS := rcos_infoserver.o \
+OBJS := rcos_InfoServer.o \
 infoserver.o
 
 %.o : %.cpp
