Refactored RCOSMethod object into a base class : MethodInterface and RCOSMethod. Also, the method parsing is done in the constructor of MethodInterface rather then in RCOSCreator. This makes the code cleaner.

--- a/src/rcc/Makefile
+++ b/src/rcc/Makefile
@@ -9,7 +9,8 @@ LDFLAGS := -g -pthread -ldl -lm -lcurl -lboost_regex
 CXXFLAGS := -std=c++0x -I$(3RDPDIR)
 3RDPOBJS := $(3RDPDIR)/mongoose/mongoose.o \
 $(3RDPDIR)/cJSON/cjson.o
-OBJS := rcosmethod.o \
+OBJS := methodinterface.o \
+rcosmethod.o \
 rcosinterface.o \
 rcoscreator.o \
 rcosrefurbisher.o
