Added a RCOCMethod object that handles client-side code generation. The MethodInterface::ImplementedType migrated to a more useful structure that also retains it's original type. This is useful for client-side code reconstruction.

--- a/src/rcc/Makefile
+++ b/src/rcc/Makefile
@@ -11,6 +11,7 @@ CXXFLAGS := -std=c++0x -I$(3RDPDIR)
 $(3RDPDIR)/cJSON/cjson.o
 OBJS := methodinterface.o \
 rcosmethod.o \
+rcocmethod.o \
 rcosinterface.o \
 rcoscreator.o \
 rcosrefurbisher.o
