Added another test-example : 'MathServer/MathClient' that deals with some actual server side calculations. Also, the Makefiles were cleaned a little bit.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,2 +1,11 @@
 all:
 	cd InfoServer; make
+	cd MathServer; make
+	cd InfoClient; make
+	cd MathClient; make
+
+clean:
+	cd InfoServer; make clean
+	cd MathServer; make clean
+	cd InfoClient; make clean
+	cd MathClient; make clean
